--- a/components/ui/Gallery.module.css
+++ b/components/ui/Gallery.module.css
@@ -1,3 +1,14 @@
+.container {
+    display: grid;
+    gap: var(--spacing-md);
+}
+
+.content {
+    display: grid;
+    align-items: center;
+    justify-content: center;
+}
+
 .gallery {
     display: grid;
     grid-auto-flow: row;
